# myproject1

./: .env.sample  .flake8  .gitignore  README.md  check_list.txt  log.txt  main.py  pyproject.toml
src/: decorators.py  external_api.py  external_query.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: test_decorator.py  test_external_api.py  test_external_query.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py  unit_tests.py
tests/data_for_tests/: log_sample.txt
